added some v2 code
