# server/src/main/java/com/xdra/hub/entity/CellStatisticsEntity.java
@@ -1,0 +1,96 @@
+package com.xdra.hub.entity;
+
+import com.fasterxml.jackson.databind.JsonNode;
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.JdbcTypeCode;
+import org.hibernate.type.SqlTypes;
+
+import java.time.Instant;
+
+@Entity
+@Table(name = "cell_statistics")
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class CellStatisticsEntity {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "container_id")
+    private Long containerId;
+
+    @Column(name = "cluster_id")
+    private Long clusterId;
+
+    @Column(name = "pack_id")
+    private Long packId;
+
+    @Column(name = "group_id")
+    private Long groupId;
+
+    @Column(name = "cell_id")
+    private Long cellId;
+
+    @Column(name = "abs_impedance_mean")
+    private Double absImpedanceMean;
+
+    @Column(name = "impedance_std_dev")
+    private Double impedanceStdDev;
+
+    @Column(name = "coefficient_variation")
+    private Double coefficientOfVariation;
+
+    @Column(name = "phase")
+    private Double phase;
+
+    @Column(name = "imp_mean_to_max_ratio")
+    private Double impMeanToMaxRatio;
+
+    @Column(name = "imp_mean_to_min_ratio")
+    private Double impMeanToMinRatio;
+
+    @Column(name = "imp_mean_to_avg_ratio")
+    private Double impMeanToAvgRatio;
+
+    @Column(name = "imp_std_dev_to_max_ratio")
+    private Double impStdDevToMaxRatio;
+
+    @Column(name = "imp_std_dev_to_min_ratio")
+    private Double impStdDevToMinRatio;
+
+    @Column(name = "imp_std_dev_to_avg_ratio")
+    private Double impStdDevToAvgRatio;
+
+    @Column(name = "nyquist_plot", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode nyquistPlot;
+
+    @Column(name = "bode_plot", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode bodePlot;
+
+    @Column(name = "drt_plot", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode drtPlot;
+
+    @Column(name = "imp_mean_matrix", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode impedanceMeanMatrix;
+
+    @Column(name = "imp_std_dev_matrix", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode impedanceStdDevMatrix;
+
+    @Column(name = "eq_circuit_data", columnDefinition = "jsonb")
+    @JdbcTypeCode(SqlTypes.JSON)
+    private JsonNode eqCircuitData;
+
+    @Column(name = "creation_time")
+    private Instant creationTime;
+}
